# data-structure-demo

./: .gitignore  CMakeLists.txt
doubly_linked_list/cpp/: doubly_linked_list.cpp  doubly_linked_list.h
hash_table/cpp/: main.cpp
linked_list/c/: single-linked-list.c
linked_list/cpp/: single_linked_list.h
linked_list/js/: main.ts  single-linked-list.js  single-linked-list.ts
linked_list/lua/: main.lua  single-linked-list-oop.lua  single-linked-list.lua
ptit/class-6/: homework.cpp
ptit/class1/: main.cpp
ptit/class2-next-permutation-and-traversal-and-recursion-algorithm/: 1-binary-array-traversal.h  2-generate-k-combinations-of-set-1-to-n.h  4-number-analytics.h  binary-array-traversal.h  generate-k-combinations-of-set-1-to-n.h  generate-permutation.h  main.cpp
ptit/section-3-backtracking-and-branch-bound/: branch-and-bound.cpp  main.cpp  string_permutations.h
queue/cpp/: DoublyLinkedList.h  main.cpp  queue.h
singly_linked_list/cpp/: main.cpp  single_linked_list.cpp  single_linked_list.h  singly_linked_list.cpp  singly_linked_list.h
singly_linked_list/js/: single-linked-list.ts
singly_linked_list/lua/: single-linked-list.lua
stack/cpp/: main.cpp  stack.h
tutorials_point_class/: compare-search-algorithms.cpp
tutorials_point_class/binary-search-algorithm/: main.cpp  while-loop-solution.cpp
tutorials_point_class/divide-and-conquer/: karatsuba-multiplication.cpp  max-min-problem.cpp  straseen-matrix-multiplication.cpp
tutorials_point_class/exponential-search-algorithm/: iteration-solution.cpp
vector/cpp/: vector.cpp  vector.h
(+75 files in other folders)
